--- a/fastcampus-project-board/src/main/resources/application.yml
+++ b/fastcampus-project-board/src/main/resources/application.yml
@@ -20,20 +20,11 @@ spring:
     properties:
       hibernate.format_sql: true
       hibernate.default_batch_fetch_size: 100
-#    database: mysql
-#    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
   sql.init.mode: always
   data.rest:
   data:
     rest:
       base-path: /api
       detection-strategy: annotated
-
----
-spring:
-  config.activate.on-profile: testdb
-#  datasource:
-#    url: jdbc:h2:mem:board;mode=mysql
-#    driver-class-name: org.h2.Driver
-#  sql.init.mode: always
-#  test.database.replace: none
+  thymeleaf3:
+    decoupled-logic: true
